# kalshi-analysis

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Makefile  PROJECT_SEED.md  README.md  pyproject.toml
problems/kalshi/: problem.md  pyproject.toml
problems/kalshi/data/events/: events_000000.parquet  events_000002.parquet  events_000004.parquet  events_000013.parquet  events_000014.parquet
problems/kalshi/data/markets/: markets_000000.parquet  markets_000001.parquet  markets_000002.parquet  markets_000003.parquet  markets_000005.parquet  markets_000007.parquet  markets_000008.parquet  markets_000010.parquet  markets_000012.parquet  markets_000013.parquet  markets_000014.parquet  markets_000015.parquet  markets_000017.parquet  markets_000018.parquet  markets_000019.parquet  markets_000021.parquet  markets_000022.parquet  markets_000023.parquet  markets_000024.parquet  markets_000026.parquet  markets_000028.parquet  markets_000029.parquet  markets_000031.parquet  markets_000032.parquet  markets_000034.parquet  markets_000036.parquet  markets_000037.parquet  markets_000040.parquet  markets_000041.parquet  markets_000042.parquet  markets_000043.parquet  markets_000044.parquet  markets_000046.parquet  markets_000047.parquet  markets_000048.parquet  markets_000051.parquet  markets_000053.parquet  markets_000054.parquet  markets_000056.parquet  markets_000057.parquet  (+1577 more)
problems/kalshi/data/series/: series_000000.parquet
problems/kalshi/data/trades/: trades_000000.parquet  trades_000006.parquet  trades_000007.parquet  trades_000009.parquet  trades_000012.parquet  trades_000013.parquet  trades_000015.parquet  trades_000016.parquet  trades_000018.parquet  trades_000019.parquet  trades_000021.parquet  trades_000025.parquet  trades_000026.parquet  trades_000028.parquet  trades_000032.parquet  trades_000037.parquet  trades_000038.parquet  trades_000039.parquet  trades_000041.parquet  trades_000045.parquet  trades_000046.parquet  trades_000050.parquet  trades_000052.parquet  trades_000063.parquet  trades_000064.parquet  trades_000067.parquet  trades_000068.parquet  trades_000069.parquet  trades_000071.parquet  trades_000073.parquet  trades_000076.parquet  trades_000077.parquet  trades_000078.parquet  trades_000081.parquet  trades_000082.parquet  trades_000083.parquet  trades_000084.parquet  trades_000086.parquet  trades_000092.parquet  trades_000093.parquet  (+9235 more)
problems/kalshi/download/: candlesticks.py  cli.py  client.py  events.py  series.py
runs/001_manual_review/: .gitignore  Makefile  PROJECT_SEED.md  data  pyproject.toml
runs/001_manual_review/reports/round_01/: report.qmd
runs/001_manual_review/reports/round_02/: report.qmd
runs/001_manual_review/reports/round_03/: report.qmd
runs/001_manual_review/reports/round_04/: report.qmd
runs/001_manual_review/src/analysis/: backtest_pnl.py  base.py  close_proximity.py  fade_yes.py  fee_structure.py  run_round_01.py  run_round_04.py  strategy_decay.py  yes_no_asymmetry.py
runs/001_manual_review/tests/: test_backtest.py  test_backtest_metrics.py  test_close_proximity.py  test_combined_filters.py  test_economics_reversal.py  test_portfolio.py  test_queries.py  test_stats.py  test_strategy_comparison.py
(+10075 files in other folders)
